--- a/StreamKitDalamud/StreamKitDalamud.csproj
+++ b/StreamKitDalamud/StreamKitDalamud.csproj
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Authors></Authors>
+    <Authors>Ricimon</Authors>
     <Company></Company>
-    <Version>0.0.0.1</Version>
+    <Version>0.1.0.0</Version>
     <Description>Trigger OBS effects with in-game actions</Description>
     <Copyright></Copyright>
     <PackageProjectUrl>https://github.com/Ricimon/FFXIV-StreamKit</PackageProjectUrl>
