Move C# plugin into its own folder. Added some extra code testing ideas, such as running a local web server and local websocket server

--- a/Plugin/StreamKitTests/StreamKitTests.csproj
+++ b/Plugin/StreamKitTests/StreamKitTests.csproj
@@ -5,6 +5,8 @@
 		<Platforms>x64</Platforms>
 
     <UserSecretsId>FFXIV-StreamKitTests-03479288aa724c30bf454c488326b6cd</UserSecretsId>
+
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,11 +21,11 @@
   </ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net48'">
-    <ProjectReference Include="..\StreamKitAct\StreamKitAct.csproj" />
+		<ProjectReference Include="..\StreamKitAct\StreamKitAct.csproj" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0-windows'">
-    <ProjectReference Include="..\StreamKitDalamud\StreamKitDalamud.csproj" />
+		<ProjectReference Include="..\StreamKitDalamud\StreamKitDalamud.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
