--- a/Plugin/StreamKit/StreamKit.csproj
+++ b/Plugin/StreamKit/StreamKit.csproj
@@ -1,11 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net48;net5.0-windows</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <Platforms>x64</Platforms>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="Ninject" Version="3.3.4" />
     <PackageReference Include="Ninject.Extensions.Logging" Version="3.3.0" />
     <PackageReference Include="NLog" Version="4.7.14" />
@@ -13,6 +15,6 @@
     <PackageReference Include="obs-websocket-dotnet" Version="4.9.1" />
     <PackageReference Include="ReactiveProperty" Version="8.0.4" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
+    <PackageReference Include="WatsonWebsocket" Version="2.3.2.1" />
   </ItemGroup>
-
 </Project>
