--- a/stream-overlay/package.json
+++ b/stream-overlay/package.json
@@ -10,11 +10,19 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.42",
     "@types/react-dom": "^17.0.14",
+    "inversify": "^6.0.1",
+    "inversify-react": "^1.0.1",
+    "loglevel": "^1.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.5.5",
+    "styled-components": "^5.3.5",
     "typescript": "^4.6.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "websocket-ts": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.24"
   }
 }
